# docs/swagger.yaml
@@ -62,6 +62,19 @@ definitions:
     - password
     - username
     type: object
+  todo.SignUpInput:
+    properties:
+      name:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - name
+    - password
+    - username
+    type: object
   todo.UpdateItemInput:
     properties:
       description:
@@ -77,21 +90,6 @@ definitions:
         type: string
       title:
         type: string
-    type: object
-  todo.User:
-    properties:
-      id:
-        type: integer
-      name:
-        type: string
-      password:
-        type: string
-      username:
-        type: string
-    required:
-    - name
-    - password
-    - username
     type: object
 info:
   contact: {}
@@ -563,7 +561,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/todo.User'
+          $ref: '#/definitions/todo.SignUpInput'
       produces:
       - application/json
       responses:
